--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
     <link rel="stylesheet" href="style.css">
-     <title>Web Map</title>
+     <title>Home</title>
 </head>
 <body>
    
