--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
    crossorigin=""/>
@@ -18,7 +19,8 @@
 <body>
    
 
-<div class="d-flex justify-content-center align-items-center" style="display: flex; justify-content: center; align-items: center; height: 100vh">
+<div class="d-flex justify-content-center align-items-center" 
+     style="display: flex; justify-content: center; align-items: center; height: 100vh">
   
   <div id="mapid"></div>
   
@@ -29,4 +31,18 @@
   </script>
 
 </body>
+</html> -->
+<html>
+
+<head>
+	<title>Google Multiple Custom Markers</title>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyDLzvlRrcAAWWBiFLNzC5KGLZTuRw3fOQg" type="text/javascript">
+  </script>
+</head>
+
+
+<body>
+  <div id="map-canvas" style="height: 500px; width: 800px; margin: 100px auto;"></div>
+</body>
+
 </html>
