map with markers

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -31,18 +31,4 @@
   </script>
 
 </body>
-</html> -->
-<html>
-
-<head>
-	<title>Google Multiple Custom Markers</title>
-  <script src="https://maps.google.com/maps/api/js?key=AIzaSyDLzvlRrcAAWWBiFLNzC5KGLZTuRw3fOQg" type="text/javascript">
-  </script>
-</head>
-
-
-<body>
-  <div id="map-canvas" style="height: 500px; width: 800px; margin: 100px auto;"></div>
-</body>
-
 </html>
