--- a/dashborad/documentation.html
+++ b/dashborad/documentation.html
@@ -440,8 +440,9 @@
                                                         </div>
                                                     </div>
 
-                                                    <iframe src="..\files\assets\snmp.pdf#toolbar=0" style="margin:auto" width="96%" height="900px">
-                                                    </iframe>
+                                                    
+                                                    <embed src="..\files\assets\snmp.pdf" type="application/pdf" style="margin:auto" width="96%" height="900px"/>
+
                                                   <div class="card-footer"><br><br><br></div>
                                                 </div>
                                             </div>
