--- a/dashborad/documentation.html
+++ b/dashborad/documentation.html
@@ -441,7 +441,7 @@
                                                     </div>
 
                                                     
-                                                    <embed src="..\files\assets\snmp.pdf" type="application/pdf" style="margin:auto" width="96%" height="900px"/>
+                                                    <embed src="https://raw.githubusercontent.com/ahmedehab52/RF-Coverage-Insights/7cfb0cfcc41de4dc2e56937bef5fa6cfcc2ccf27/files/assets/snmp.pdf" type="application/pdf" style="margin:auto" width="96%" height="900px"/>
 
                                                   <div class="card-footer"><br><br><br></div>
                                                 </div>
